--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
-    "@remix-run/react": "^2.8.0",
-    "@remix-run/server-runtime": "^2.8.0",
-    "@shopify/cli": "3.58.0",
-    "@shopify/cli-hydrogen": "^8.0.1",
-    "@shopify/hydrogen": "2024.4.1",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/server-runtime": "^2.9.2",
+    "@shopify/cli": "^3.61.2",
+    "@shopify/cli-hydrogen": "^8.1.1",
+    "@shopify/hydrogen": "^2024.4.6",
     "@shopify/remix-oxygen": "^2.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
-    "@remix-run/dev": "^2.8.0",
-    "@remix-run/eslint-config": "^2.8.0",
+    "@remix-run/dev": "^2.9.2",
+    "@remix-run/eslint-config": "^2.9.2",
     "@shopify/hydrogen-codegen": "^0.3.0",
     "@shopify/mini-oxygen": "^3.0.1",
     "@shopify/oxygen-workers-types": "^4.0.0",
