--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@shopify/remix-oxygen": "^2.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.0.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
