--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/server-runtime": "^2.9.2",
