--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shopify/cli-hydrogen": "^8.1.1",
     "@shopify/hydrogen": "^2024.4.6",
     "@shopify/remix-oxygen": "^2.0.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.5",
