--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-hydrogen": "0.12.2",
     "postcss": "^8.4.38",
     "prettier": "^2.8.4",
+    "remix-development-tools": "^4.2.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
